--- a/drfahm-frontend/package.json
+++ b/drfahm-frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nqtexcel-frontend",
+  "name": "drfahm-frontend",
   "version": "1.0.0",
   "private": true,
+  "description": "DrFahm - Gamified test prep for QUDURAT, NAFS & TAHSILI exams",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://drfahm.com",
+  "author": "DrFahm Team",
+  "license": "PROPRIETARY"
 }
